News UAT/force-app/main/default/objects/Client_Value_Point__c/Client_Value_Point__c.object-meta.xml
<CustomObject>
    <description>Client Value Points are used to help define Targeting Discount (%) for Print and Digital products based on the Client Value Score derived from Client Value Pointsparameters (i.e. Frequency, Share of Wallet, etc).</description>
    <label>Client Value Point</label>
    <nameField>
        <displayFormat>CVP-{000}</displayFormat>
        <label>Client Value Point Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Value Points</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>