News UAT/force-app/main/default/objects/Client_Value_Point__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>Name of the Negotiation Point parameter used in determining the Negotiation Score.</description>
    <inlineHelpText>Name of the Negotiation Point parameter used in determining the Negotiation Score.</inlineHelpText>
    <label>Name</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Frequency</fullName>
            </value>
            <value>
                <fullName>Number of Publications</fullName>
            </value>
            <value>
                <fullName>Print Client</fullName>
            </value>
            <value>
                <fullName>Product Mix</fullName>
            </value>
            <value>
                <fullName>Share of Wallet</fullName>
            </value>
            <value>
                <fullName>Insertion Count</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>