News UAT/force-app/main/default/objects/Client_Value_Point__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <description>Negotiation Score returned as the result of the Negotiation Point parameters combination.</description>
    <inlineHelpText>Negotiation Score returned as the result of the Negotiation Point parameters combination.</inlineHelpText>
    <label>Score</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>