News UAT/force-app/main/default/objects/Client_Value_Point__c/listViews/Client_Value_Points.listView-meta.xml
<ListView>
    <fullName>Client_Value_Points</fullName>
    <columns>NAME</columns>
    <columns>Platform__c</columns>
    <columns>Value__c</columns>
    <columns>Name__c</columns>
    <columns>Score__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Platform__c</field>
        <operation>equals</operation>
        <value>Print</value>
    </filters>
    <label>Client Value Points</label>
</ListView>